--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <kotlin.version>1.2.60</kotlin.version>
+        <kotlin.version>1.3.72</kotlin.version>
         <tornadofx.version>1.7.17</tornadofx.version>
     </properties>
 
@@ -59,6 +59,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <languageVersion>1.3</languageVersion>
+                </configuration>
             </plugin>
         </plugins>
     </build>
